--- a/crawler-src/pom.xml
+++ b/crawler-src/pom.xml
@@ -35,7 +35,32 @@
 
   <build>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
+
       <plugins>
+
+	 <plugin>
+			  <artifactId>maven-assembly-plugin</artifactId>
+			  <executions>
+				  <execution>
+					   <phase>package</phase>
+					   <goals>
+						   <goal>single</goal>
+					   </goals>
+				   </execution>
+			   </executions>
+			   <configuration>
+					<!-- ... -->
+					<archive>
+						<manifest>
+							  <mainClass>fully.qualified.MainClass</mainClass>
+						</manifest>
+					</archive>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+				   </descriptorRefs>
+			  </configuration>
+	  </plugin>
+
         <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
         <plugin>
           <artifactId>maven-clean-plugin</artifactId>
