--- a/crawler-src/pom.xml
+++ b/crawler-src/pom.xml
@@ -31,6 +31,12 @@
 	  <artifactId>jsoup</artifactId>
 	  <version>1.16.1</version>
   </dependency>
+  <!-- https://mvnrepository.com/artifact/com.opencsv/opencsv -->
+  <dependency>
+	  <groupId>com.opencsv</groupId>
+	  <artifactId>opencsv</artifactId>
+	  <version>5.7.1</version>
+  </dependency>
   </dependencies>
 
   <build>
