--- a/crawler-src/pom.xml
+++ b/crawler-src/pom.xml
@@ -5,8 +5,8 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>trtLab</groupId>
-  <artifactId>crawler-src</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <artifactId>crawler</artifactId>
+  <version>1.0</version>
 
   <name>crawler-src</name>
   <!-- FIXME change it to the project's website -->
@@ -64,7 +64,7 @@
 					<descriptorRefs>
 						<descriptorRef>jar-with-dependencies</descriptorRef>
 				   </descriptorRefs>
-			  </configuration>
+		  </configuration>
 	  </plugin>
 
         <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
